// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar /> Snaphot must match circleBadgeLargeIcon 1`] = `
<a
  className="CircleBadge CircleBadge--large bg-gray-dark"
  href="href"
  title="title"
>
  <svg
    aria-hidden="true"
    className="CircleBadge-icon text-white"
    height={16}
    role="img"
    style={
      Object {
        "display": "inline-block",
        "fill": "currentColor",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 10 16"
    width={10}
  >
    <path
      d="M10 7H6l3-7-9 9h4l-3 7 9-9z"
      fillRule="evenodd"
    />
  </svg>
</a>
`;

exports[`<Avatar /> Snaphot must match circleBadgeMediumIcon 1`] = `
<a
  className="CircleBadge CircleBadge--medium bg-gray-dark"
  href="href"
  title="title"
>
  <svg
    aria-hidden="true"
    className="CircleBadge-icon text-white"
    height={16}
    role="img"
    style={
      Object {
        "display": "inline-block",
        "fill": "currentColor",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 10 16"
    width={10}
  >
    <path
      d="M10 7H6l3-7-9 9h4l-3 7 9-9z"
      fillRule="evenodd"
    />
  </svg>
</a>
`;

exports[`<Avatar /> Snaphot must match circleBadgeSmallIcon 1`] = `
<a
  className="CircleBadge CircleBadge--small bg-yellow"
  href="href"
  title="title"
>
  <svg
    aria-hidden="true"
    className="CircleBadge-icon text-white"
    height={16}
    role="img"
    style={
      Object {
        "display": "inline-block",
        "fill": "currentColor",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 10 16"
    width={10}
  >
    <path
      d="M10 7H6l3-7-9 9h4l-3 7 9-9z"
      fillRule="evenodd"
    />
  </svg>
</a>
`;
